<resources>
    <string name="app_name">Whac-A-Mole</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hit_a_mole_to_get_a_score">Hit a mole to get a score!</string>
    <string name="timer">00:30</string>
    <string name="basic_score">0</string>
    <string name="top_score">TOP SCORE</string>
    <string name="play_again">PLAY AGAIN</string>
    <string name="menu">MENU</string>
    <string name="score">SCORE</string>
    <string name="play">PLAY</string>
    <string name="top_score_starter">Top score</string>
    <string name="title">Whac-A-Mole!</string>
    <string name="game_over">GAME OVER!</string>
</resources>