<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.fragments.ResultFragment"
    android:background="@drawable/ground">

    <TextView
        android:id="@+id/game_over"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/game_over"
        android:textAlignment="center"
        android:textColor="@color/primaryTextColor"
        android:textSize="64sp"
        android:textStyle="bold"
        android:layout_marginTop="24dp"/>

    <TextView
        android:id="@+id/last_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/game_over"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="60dp"
        android:textAlignment="center"
        android:textColor="@color/primaryTextColor"
        android:textSize="24sp"
        android:textStyle="bold"
        android:paddingTop="12dp"
        android:text="@string/score" />

    <TextView
        android:id="@+id/last_score_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/last_score"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="85dp"
        android:textAlignment="center"
        android:textColor="@color/primaryTextColor"
        android:textSize="48sp"
        android:textStyle="bold"
        android:paddingTop="12dp" />

    <TextView
        android:id="@+id/top_score_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/top_score"
        app:layout_constraintTop_toBottomOf="@id/game_over"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="40dp"
        android:textAlignment="center"
        android:textColor="@color/primaryTextColor"
        android:textSize="24sp"
        android:textStyle="bold"
        android:paddingTop="12dp" />
    <TextView
        android:id="@+id/top_score_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/last_score"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="85dp"
        android:textAlignment="center"
        android:textColor="@color/primaryTextColor"
        android:textSize="48sp"
        android:textStyle="bold"
        android:paddingTop="12dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/play_again"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/play_again"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/primaryTextColor"
        android:textSize="24sp"
        android:textStyle="bold"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/to_menu"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/menu"
        app:layout_constraintTop_toBottomOf="@+id/play_again"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/primaryTextColor"
        android:textSize="24sp"
        android:textStyle="bold"/>


</androidx.constraintlayout.widget.ConstraintLayout>