<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/ground"
    android:theme="@style/Theme.WhacAMole"
    tools:context=".presentation.fragments.StartFragment">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:text="@string/title"
        android:textColor="@color/brown"
        android:textAlignment="center"
        android:textSize="48sp"
        android:textStyle="italic|bold"
        />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/top_score_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title"
        android:layout_marginTop="48dp"
        android:text="@string/top_score_starter"
        android:textAlignment="center"
        android:textColor="@color/primaryTextColor"
        android:textSize="48sp"
        android:textStyle="bold" />
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/top_score_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_below="@id/top_score_label"
        android:layout_marginTop="10dp"
        android:textColor="@color/primaryTextColor"
        android:textSize="48sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/play"
        android:layout_width="192dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/play"
        android:textColor="@color/primaryTextColor"
        android:textSize="48sp"
        android:textStyle="bold" />

    <ImageButton
        android:id="@+id/rules"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:background="@android:color/transparent"
        android:padding="8dp"
        android:src="@drawable/ic_info" />

</RelativeLayout>